--- a/src/styles.css
+++ b/src/styles.css
@@ -67,149 +67,150 @@ h4 {
 }
 
 #logInBtn {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-688px, 432px);
-      font-size: 22px;
-      font-family: 'Raleway', sans-serif;
-      border: 0.5rem double rgb(255, 255, 255, 0.8);
-      z-index: +1;
-      padding: 24px 36px 24px 37px;
-    }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  font-size: 22px;
+  font-family: 'Raleway', sans-serif;
+  border: 0.5rem double rgb(255, 255, 255, 0.8);
+  z-index: +1;
+  padding: 24px 36px 24px 37px;
+}
 
-    img {
-      border-radius: 15px 50px;
-    }
+img {
+  border-radius: 15px 50px;
+}
 
-    #shrugs {
-      border-radius: 0%;
-    }
+#shrugs {
+  border-radius: 0%;
+}
 
-    a {
-      color: white;
-    }
+a {
+  color: white;
+}
 
-    .centered:hover {
-      color: rgb(255, 219, 77, 0.9);
-      font-family: 'Bungee Inline', cursive;
-      font-size: 38px;
-    }
+.centered:hover {
+  color: rgb(255, 219, 77, 0.9);
+  font-family: 'Bungee Inline', cursive;
+  font-size: 38px;
+}
 
-    a:hover {
-      text-decoration: none;
-      color: white;
-    }
-
-
-    /* Slider CSS styles */
-    #segway {
-      font-family: 'Raleway', sans-serif;
-      display: none;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-attachment: fixed;
-      background-image: url("https://media.giphy.com/media/Rki7fShXrJ3JZCpVeb/giphy.gif");
-      height: 100vw;
-      width: 100vw;
-    }
-
-    #congrats {
-      padding-top: 300px;
-      text-align:center;
-      font-family: 'Raleway', sans-serif;
-      color: white;
-      font-size: 100px;
-      text-shadow:
-      -.5px -.5px 0 grey,
-      .5px -.5px 0 grey,
-      -.5px .5px 0 grey,
-      .5px .5px 0 grey;
+a:hover {
+  text-decoration: none;
+  color: white;
+}
 
 
-    }
-    #sliderPage {
-      font-family: 'Raleway', sans-serif;
-      display: none;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-attachment: fixed;
-      background-image: url("https://media.giphy.com/media/Rki7fShXrJ3JZCpVeb/giphy.gif");
-      height: 100vw;
-      width: 100vw;
-    }
+/* Slider CSS styles */
+#segway {
+  font-family: 'Raleway', sans-serif;
+  display: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url("https://media.giphy.com/media/Rki7fShXrJ3JZCpVeb/giphy.gif");
+  height: 100vw;
+  width: 100vw;
+}
 
-    #apiButton{
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 40px;
-      font-family: 'Raleway', sans-serif;
-      color: white;
-      border: 0.5rem double rgb(255, 255, 255, 0.8);
-    }
-
-    #makeButton {
-      margin: 0, auto;
-    }
-
-    .slidecontainer {
-      margin: 25px;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
-
-    #valenceText {
-      text-align: center;
-      font-family: 'Raleway', sans-serif;
-      font-size: 45px
-    }
+#congrats {
+  padding-top: 300px;
+  text-align:center;
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  font-size: 100px;
+  text-shadow:
+  -.5px -.5px 0 grey,
+  .5px -.5px 0 grey,
+  -.5px .5px 0 grey,
+  .5px .5px 0 grey;
 
 
-    .slider {
-      -webkit-appearance: none;
-      width: 100%;
-      height: 25px;
-      border-radius: 5px;
-      background: #d3d3d3;
-      outline: none;
-      opacity: 0.7;
-      -webkit-transition: .2s;
-      transition: opacity .2s;
-    }
+}
+#sliderPage {
+  font-family: 'Raleway', sans-serif;
+  display: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url("https://media.giphy.com/media/Rki7fShXrJ3JZCpVeb/giphy.gif");
+  height: 100vw;
+  width: 100vw;
+}
 
-    .slider:hover {
-      opacity: 1;
-    }
+#apiButton{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  border: 0.5rem double rgb(255, 255, 255, 0.8);
+}
 
-    .slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 23px;
-      height: 24px;
-      border-radius: 50%;
-      background: #4CAF50;
-      cursor: pointer;
-    }
+#makeButton {
+  margin: 0, auto;
+}
 
-    .slider::-moz-range-thumb {
-      width: 23px;
-      height: 24px;
-      border-radius: 50%;
-      background: #4CAF50;
-      cursor: pointer;
-    }
+.slidecontainer {
+  margin: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
-    #rainbows, #depressed {
-      display: none;
-    }
-    #myValence {
-      text-decoration-color: black;
-    }
+#valenceText {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 45px
+}
 
-    input[type=range] {
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 23px;
+  height: 24px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 23px;
+  height: 24px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+#rainbows, #depressed {
+  display: none;
+}
+#myValence {
+  text-decoration-color: black;
+}
+
+input[type=range] {
   -webkit-appearance: none;
   width: 100%;
   margin: 13.1px 0;
@@ -306,10 +307,10 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
   background: #00f0d7;
 }
-    /* p5 styling  */
-    iframe {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      transform: translate(-10%, 0%);
-    }
+/* p5 styling  */
+iframe {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transform: translate(-10%, 0%);
+}
