--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
-#log-in {
+/* #log-in {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   height: 100vw;
   width: 100vw;
-}
+} */
 
 #genreBoxes {
   display: none;
